refactor: Card의 of 메서드 하나로 통일